--- a/styles/styles.css
+++ b/styles/styles.css
@@ -56,18 +56,63 @@ span {
   color: white;
 }
 
-.content {
-  text-align: center;
-  height: 79vh;
+.wrapper {
+  display: flex;
+  align-items: flex-start;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.item {
+  display: flex;
+  text-align: left;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  border-bottom: 2px #eee solid;
+}
+
+.item .date {
+  text-align: left;
+  color: black;
+  font-weight: 900;
+  font-size: 22px;
+  min-width: 200px;
+}
+
+.item .message {
+  margin-left: 5px;
+  text-align: left;
+  color: black;
+  font-size: 22px;
+  font-weight: normal;
+}
+
+.item .date::after {
+  content: ':';
 }
 
 .links {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
+  justify-content: flex-start;
   text-align: center;
-  margin-top: 10px;
-  /*max-width: 50%;*/
+  max-width: 50%
+}
+
+.news {
+  margin: 15px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background-color: white;
+  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.25);
+  width: 50%;
+  height: 100%;
+  text-align: center;
+}
+
+.items {
+  overflow-y: scroll;
+  max-height: 65vh;
 }
 
 i {
@@ -99,50 +144,6 @@ i {
   -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3);
-}
-
-.smallicon {
-  background-color: #00aeef;
-  border-radius: 5px;
-  width: 200px;
-  height: 75px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  z-index: 1;
-  cursor: auto;
-  list-style: none;
-  margin: 15px;
-}
-
-.smallicon span {
-  font-size: 22px;
-  color: white;
-}
-
-.smallicon a {
-  font-size: 22px;
-  color: white;
-}
-
-
-.warningbox {
-  background-color: #EE3124;
-  border-radius: 5px;
-  height: 175px;
-  width: 700px;
-  display: flex;
-  justify-content: center;
-  text-align: center;
-  flex-flow: row wrap;
-  flex-direction: column;
-  cursor: help;
-  margin: 15px;
-}
-
-.warningbox span {
-  font-size: 22px;
-  color: white;
 }
 
 footer {
