--- a/styles/styles.css
+++ b/styles/styles.css
@@ -137,6 +137,14 @@ i {
   cursor: pointer;
 }
 
+.icon img {
+  height: 75px;
+  width: 75px;
+  padding-left: 44px;
+  filter: brightness(0) invert(1);
+  transform: scale(1.3) translateY(-3px);
+}
+
 .links a {
   margin: 15px;
 }
@@ -202,6 +210,11 @@ footer img {
 
     nav {
       justify-content: center;
+      position: fixed;
+      top: 0;
+      z-index: 10;
+      width: 100%;
+      box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.25);
     }
 
     .pages {
@@ -214,12 +227,48 @@ footer img {
 
     .links {
       max-width: 100%;
+      margin-top: 110px;
+    }
+
+    .links a {
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
 
     .icon {
       width: 94vw;
-      display: block;
-      align-items: baseline;
-      justify-content: center;
+      font-size: 30px;
+      display: inline-flex;
+      align-items: center;
     }
+
+    .icon img {
+      display: none;
+    }
+
+    .icon i {
+      display: none;
+    }
+
+    .icon span {
+      max-width: 400px;
+      font-size: 45px;
+    }
+
+    footer {
+      position: static;
+    }
+
+    #champlain {
+      position: static;
+      background-color: #231f20;
+      height: 100%;
+    }
+
+    #footer-background {
+      display: none;
+    }
+
+
 }
