--- a/styles/saotm.css
+++ b/styles/saotm.css
@@ -14,9 +14,13 @@ nav {
   max-width: 100%;
   background-color: #00aeef;
   padding: 25px;
-  list-style: none;
   display: flex;
   justify-content: space-between;
+}
+
+#logo-wrapper {
+  display: flex;
+  flex-flow: row wrap;
 }
 
 .logo {
