Cleanup SAOTM styles page and fix footer

--- a/styles/saotm.css
+++ b/styles/saotm.css
@@ -1,145 +1,6 @@
-@import url('https://fonts.googleapis.com/css?family=Lato');
+/* Include "styles.css" first! */
 
-html, body {
-  font-family: 'Lato', sans-serif;
-  margin: 0;
-  padding: 0;
-  background-color: #eee;
-}
-
-nav {
-  position: relative;
-  display: flex;
-  align-items: center;
-  max-width: 100%;
-  background-color: #00aeef;
-  padding: 25px;
-  display: flex;
-  justify-content: space-between;
-}
-
-#logo-wrapper {
-  display: flex;
-  flex-flow: row wrap;
-}
-
-.logo {
-  display: flex;
-  align-items: center;
-}
-
-.pages {
-  list-style: none;
-  display: flex;
-}
-
-li {
-  color: white;
-  font-weight: 900;
-  margin-left: 25px;
-  padding: 15px;
-}
-
-li:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
-}
-
-nav img {
-  width: 30px;
-  height: auto;
-  padding: 2px;
-  /*filter: brightness(0) invert(1);*/
-}
-
-span {
-  font-size: 45px;
-  font-weight: 900;
-  color: white;
-}
-
-.content {
+.saotmbox {
   text-align: center;
   height: 79vh;
-}
-
-.links {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  text-align: center;
-  margin-top: 10px;
-}
-
-i {
-  color: white;
-  height: 75px;
-  width: auto;
-}
-
-.icon {
-  background-color: #00aeef;
-  border-radius: 5px;
-  height: 175px;
-  width: 175px;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  cursor: pointer;
-  margin: 15px;
-}
-
-.icon span {
-  font-size: 22px;
-}
-
-.icon:hover {
-  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3);
-}
-
-footer {
-  position: fixed;
-  z-index: -1;
-  height: 100px;
-  width: 100%;
-  bottom: 0;
-}
-
-#champlain {
-  position: fixed;
-  z-index: 1;
-  display: flex;
-  align-items: center;
-  padding-left: 10%;
-  padding-top: 25px;
-}
-
-footer span {
-  font-size: 25px;
-  padding-left: 15px;
-}
-
-footer img {
-  width: 50px;
-}
-
-#footer-background {
-  position: fixed;
-  background-color: #231f20;
-  height: 90px;
-  width: 100%;
-  bottom: 0;
-  -webkit-box-shadow: inset 0px 6px 5px 0px rgba(0,0,0,0.25);
-  -moz-box-shadow: inset 0px 6px 5px 0px rgba(0,0,0,0.25);
-  box-shadow: inset 0px 6px 5px 0px rgba(0,0,0,0.25);
-}
-
-.btn {
-  background-color: #00aeef !important;
-  cursor: pointer;
 }
