--- a/styles/extensions.css
+++ b/styles/extensions.css
@@ -1,10 +1,16 @@
+.extensionswrapperwrapper {
+
+  overflow-y: scroll;
+  height: 79vh;
+}
 
 .extensionswrapper {
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  padding-left: 15px;
-  padding-right: 15px;
+  /*padding-left: 15px;
+  padding-right: 15px;*/
+  padding: 15px;
 }
 
 .extensionsbox {
