--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@ nav {
   padding: 25px;
   display: flex;
   justify-content: space-between;
+  box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
 }
 
 #logo-wrapper {
@@ -66,6 +67,7 @@ nav img {
   align-items: flex-start;
   padding-left: 15px;
   padding-right: 15px;
+  padding-bottom: 100px;
 }
 
 .item {
@@ -94,10 +96,6 @@ nav img {
   color: black;
   font-size: 22px;
   font-weight: normal;
-}
-
-.item .date::after {
-  content: ':';
 }
 
 .links {
