--- a/styles/styles.css
+++ b/styles/styles.css
@@ -157,6 +157,38 @@ i {
   transform: scale(1.3) translateY(-3px);
 }
 
+.icon-update {
+  background-color: #00aeef;
+  border-radius: 5px;
+  height: 170px;
+  width: 170px;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+
+.icon-update i {
+  font-size: 75px;
+  margin-bottom: -5px;
+}
+
+.icon-update span {
+  position: relative;
+  font-size: 22px;
+}
+
+.icon-update img {
+  position: relative;
+  width: auto;
+  height: 75px;
+  filter: brightness(0) invert(1);
+}
+
+.icon-update span {
+  font-size: 22px
+}
+
 .links a {
   margin: 15px;
 }
