--- a/styles/styles.css
+++ b/styles/styles.css
@@ -168,6 +168,13 @@ i {
   align-items: center;
 }
 
+.icon-update:hover {
+  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
+  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.3);
+}
+
+
 .icon-update i {
   font-size: 75px;
   margin-bottom: -5px;
