--- a/styles/styles.css
+++ b/styles/styles.css
@@ -17,6 +17,7 @@ nav {
   display: flex;
   justify-content: space-between;
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
+  margin-left: 120px;
 }
 
 #logo-wrapper {
@@ -65,7 +66,7 @@ nav img {
 .wrapper {
   display: flex;
   align-items: flex-start;
-  padding-left: 15px;
+  padding-left: 135px;
   padding-right: 15px;
   padding-bottom: 100px;
 }
@@ -115,7 +116,7 @@ nav img {
   padding-left: 25px;
   padding-right: 25px;
   background-color: white;
-  box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.25);
+   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   width: 50%;
   height: 100%;
   text-align: center;
@@ -242,9 +243,9 @@ footer img {
   height: 90px;
   width: 100%;
   bottom: 0;
-  -webkit-box-shadow: inset 0px 6px 5px 0px rgba(0,0,0,0.25);
+  /*-webkit-box-shadow: inset 0px 6px 5px 0px rgba(0,0,0,0.25);
   -moz-box-shadow: inset 0px 6px 5px 0px rgba(0,0,0,0.25);
-  box-shadow: inset 0px 6px 5px 0px rgba(0,0,0,0.25);
+  box-shadow: inset 0px 6px 5px 0px rgba(0,0,0,0.25);*/
 }
 
 .btn {
