--- a/styles/styles.css
+++ b/styles/styles.css
@@ -113,13 +113,19 @@ nav img {
 
 .news {
   margin: 15px;
+  padding-top: 1px;
   padding-left: 25px;
   padding-right: 25px;
   background-color: white;
-   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-  width: 50%;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  width: 90%;
   height: 100%;
   text-align: center;
+}
+
+.news:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .news h1 i {
@@ -131,6 +137,23 @@ nav img {
   margin-top: -30px;
   overflow-y: auto;
   max-height: 65vh;
+}
+
+.info {
+  margin: 15px;
+  padding-top: 1px;
+  padding-left: 25px;
+  padding-right: 25px;
+  background-color: white;
+  box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  transition: all 0.3s cubic-bezier(.25,.8,.25,1);
+  width: 90%;
+  height: 100%;
+  text-align: center;
+}
+
+.info:hover {
+  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 i {
