--- a/styles/styles.css
+++ b/styles/styles.css
@@ -59,6 +59,7 @@ nav img {
 #logo-wrapper span, .links span, footer span {
   font-size: 45px;
   font-weight: 900;
+  line-height: 95%;
   color: white;
 }
 
