--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -7,47 +7,19 @@
   width: 120px;
   height: 100vh;
   background-color: #231f20;
+  transition: all .2s ease-in-out;
+}
+
+.sidebar:hover {
+  width: 380px;
+  transition: all .2s ease-in-out;
 }
 
 .logo {
-  display: flex;
-  justify-content: center;
+  margin-left: 30px;
   margin-bottom: 15px;
 }
 
 .logo img {
   height: 75px;
-}
-
-.side-element {
-  /*height: 45px;*/
-  width: 100%;
-  text-align: center;
-  padding-top: 15px;
-  padding-bottom: 1px;
-  cursor: pointer;
-}
-
-.side-element:hover {
-  background-color: rgba(255, 255, 255, 0.3);
-  border-radius: 5px;
-  -webkit-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  -moz-box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.75);
-  box-shadow: 0px 3px 5px 0px rgba(0,0,0,0.1);
-}
-
-.side-element p {
-  margin-top: -1px;
-  color: white;
-}
-
-.side-element i {
-  height: auto;
-  font-size: 40px;
-}
-
-.side-element img {
-  height: 60px;
-  width: auto;
-  filter: brightness(0) invert(1);
 }
