--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,13 +9,12 @@ html, body {
 
 nav {
   position: relative;
-  display: flex;
-  align-items: center;
   max-width: 100%;
   background-color: #00aeef;
-  padding: 25px;
+  padding: 25px 25px 10px 0;
   display: flex;
   justify-content: space-between;
+  align-items: flex-start;
   box-shadow: 0px 1px 5px 0px rgba(0,0,0,0.75);
   margin-left: 120px;
 }
@@ -28,6 +27,7 @@ nav {
 .logo {
   display: flex;
   align-items: center;
+  margin-right: -20px;
 }
 
 .pages {
@@ -119,13 +119,9 @@ nav img {
   background-color: white;
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   transition: all 0.3s cubic-bezier(.25,.8,.25,1);
-  width: 90%;
   height: 100%;
+  min-width: 35vw;
   text-align: center;
-}
-
-.news:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 .news h1 i {
@@ -150,10 +146,6 @@ nav img {
   width: 90%;
   height: 100%;
   text-align: center;
-}
-
-.info:hover {
-  box-shadow: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
 }
 
 i {
