hopefully this looks good

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -301,6 +301,7 @@ and (max-device-width : 480px) {
     nav img {
       width: auto;
       height: 22px;
+      padding-right: 20px;
       filter: brightness(0) invert(1);
       background-color: transparent;
       border-right: 1px solid #838383;
