--- a/styles/styles.css
+++ b/styles/styles.css
@@ -10,8 +10,8 @@ html, body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
-  width: 100%;
-  height: 100%;
+  width: 100vw;
+  height: 100vh;
 }
 
 nav {
@@ -81,15 +81,6 @@ nav img {
   color: white;
 }
 
-.wrapper {
-  display: flex;
-  align-items: flex-start;
-  padding-top: 15px;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 100px;
-}
-
 .item {
   display: flex;
   text-align: left;
@@ -121,38 +112,12 @@ nav img {
 .links {
   display: flex;
   flex-flow: row wrap;
-  justify-content: flex-start;
   text-align: center;
-  max-width: 40%;
-  padding-left: 8%;
-  padding-top: 100px;
+  max-width: 50%;
 }
 
 #secret {
   display: none;
-}
-
-.news {
-  margin: 15px;
-  padding-left: 25px;
-  padding-right: 25px;
-  margin-right: 8%;
-  background-color: white;
-  box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  width: 50%;
-  height: 100%;
-  text-align: center;
-}
-
-.news h1 i {
-  color: #eee;
-  cursor: pointer;
-}
-
-.items {
-  margin-top: -30px;
-  overflow-y: auto;
-  max-height: 65vh;
 }
 
 i {
@@ -191,8 +156,9 @@ i {
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  cursor: pointer;
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
-  transition: all .1s ease-in-out;  
+  transition: all .1s ease-in-out;
 }
 
 .icon-update:hover {
@@ -213,14 +179,9 @@ i {
 }
 
 .icon-update img {
-  position: relative;
   width: auto;
   height: 75px;
   filter: brightness(0) invert(1);
-}
-
-.links a {
-  margin: 15px;
 }
 
 .icon span {
@@ -230,7 +191,7 @@ i {
 .icon:hover {
   box-shadow: 0 30px 40px -15px rgba(0,0,0,0.35);
   transform: scale(1.03);
-  transition: all .1s ease-in-out;  
+  transition: all .1s ease-in-out;
 }
 
 
@@ -278,41 +239,43 @@ footer img {
 /* Media Queries */
 
 @media only screen
-and (min-device-width : 320px)
-and (max-device-width : 480px) {
+and (max-width: 600px) {
+
+  .links {
+    display: flex;
+    flex-flow: row wrap;
+    width: 100vw;
+    padding-left: 0;
+    padding-top: 0;
+  }
 
     nav {
       justify-content: center;
-      position: fixed;
       top: 0;
       z-index: 10;
-      width: 100%;
+      width: 100vw;
       box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.25);
     }
-  
+
     #logo-wrapper {
       display: flex;
       width: 125%;
       height: 30px;
     }
-  
+
     nav img {
       padding-left: 135px;
     }
-    
+
     li {
       color:white;
       font-weight: 900;
       margin-left: 25px;
       font-size: 16px;
      }
-
+    /*
     .news {
       display: none;
-    }
-
-    .links {
-      max-width: 100%;
     }
 
     .links a {
@@ -346,7 +309,7 @@ and (max-device-width : 480px) {
       font-size: 30px;
       padding-top: 80px;
     }
-  
+    */
     #wings span, #drive span {
       top: -40%;
     }
