--- a/styles/styles.css
+++ b/styles/styles.css
@@ -235,6 +235,12 @@ footer img {
   cursor: pointer;
 }
 
+img.sticky {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+}
+
 /* Media Queries */
 
 @media only screen
