--- a/styles/styles.css
+++ b/styles/styles.css
@@ -8,6 +8,7 @@ html, body {
   background-color: #eee;
   background-image: url('../images/landing-backgrounds.png');
   background-repeat: no-repeat;
+  background-attachment: fixed;
   background-size: cover;
   background-position: center center;
   width: 100vw;
