--- a/styles/styles.css
+++ b/styles/styles.css
@@ -260,6 +260,7 @@ and (max-width: 600px) {
       top: 0;
       z-index: 10;
       width: 100vw;
+      overflow: hidden;
       box-shadow: 0px 0px 5px 2px rgba(0, 0, 0, 0.25);
     }
 
